--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <br>
     <p style="color: green;">Across the Internet</p>
     <p>
-        LinkedIn: <a href="https://id.linkedin.com/in/mufty-jauhari">Mufty Jauhari</a>, 
-        GitHub: <a href="https://github.com/MuftyJauhari">MuftyJauhari</a>, 
+        <a href="https://id.linkedin.com/in/mufty-jauhari"><img height="45px" src="https://img.icons8.com/?size=48&id=114445&format=png" alt=""></a> 
+        <a href="https://github.com/MuftyJauhari"><img height="50px" src="https://img.icons8.com/?size=64&id=4Z2nCrz5iPY2&format=png" alt=""></a>
     </p>
     <br>
 </body>
